--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Electricity Flux
-email: your-email@example.com
+email: 256408460+electricityflux@users.noreply.github.com
 description: >- # this means to ignore newlines until "baseurl:"
-A blog centred on the energy transition and the engineering/economics required to achieve it.
+A blog centred on the energy transition, primarily the engineering and policy required to achieve it for Great Britain.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
