--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Electricity Flux
+author: ""
+
 email: ""
 description: "Electricity Flux is a website orientated around the energy transition in Great Britain and the engineering and policy required to achieve it."
 baseurl: ""
