--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,7 @@ theme: minima
 
 plugins:
   - jekyll-feed
+
+<head>
+  <meta name="google-site-verification" content="46SRye6oSutqvTDWoOhSOXnLHdIOLBWhdcmQInAp-_I" />
+</head>
